# Uptime-page

./: .env.example  Dockerfile  README.md  adzdzdaf.sql  alembic.ini  backup.sql  deploy.sh  docker-compose.yml  main.py  pyproject.toml  security_attack_test.py
alembic/: env.py
alembic/versions/: 242aede75aae_initial_schema.py  b28fb3806145_add_users_table.py  c12345678901_add_composite_index.py
app/: __init__.py  auth.py  config.py  database.py  limiter.py  main.py  models.py  schemas.py
app/routers/: auth.py  servers.py
app/services/: ping_service.py  server_service.py
redirect-page/: index.html
static/css/: style.css
static/favicons/: site.webmanifest
static/js/: theme.js  tooltip.js  utils.js
templates/: base.html  dashboard.html  login.html  public.html
